--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <script src='node_modules/phaser/dist/phaser.min.js'></script>
     <script src='dist/index.js'></script>
 </head>
 <body>
