Testing randomly generated levels

--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <noscript>
         <strong>We're sorry but this site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id='gameContainer'></div>
 </body>
