--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script src='node_modules/phaser/dist/phaser.min.js'></script>
-    <script src='node_modules/phaser-navmesh/dist/phaser-navmesh.min.js'></script>
+    <script src='node_modules/phaser-navmesh/dist/phaser-navmesh.js'></script>
     <script src='dist/index.js'></script>
     <style>
         body, html {
