Added support for Electron

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head>
     <script src='node_modules/phaser/dist/phaser.min.js'></script>
     <script src='dist/index.js'></script>
+    <style>
+        body, html {
+            margin: 0px;
+            padding: 0px;
+        }
+    </style>
 </head>
 <body>
     <noscript>
